# eos-btc-plugin

./: .gitmodules  CMakeLists.txt  README.md  build.sh
libraries/: CMakeLists.txt
libraries/core/: BRKey.c  BRPeer.c  BRPeerManager.c  CMakeLists.txt
libraries/core/include/: BRChainParams.h  BRPeer.h  BRPeerManager.h
mytest/: CMakeLists.txt  mytest.c
test/: CMakeLists.txt
